[package]
name = "learn-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
tokio = { version = "1", features = ["full"] }
cdrs-tokio = "8.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.20.2"
cdrs-tokio-helpers-derive = "5.0.3"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

